--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     sans-serif;
   padding: 10px 10px;
+  
 }
 .container {
   display: flex;
@@ -11,6 +12,7 @@
   align-self: center;
   max-width: 500px;
   width: 100%;
+  text-align: center;
   background-color: gray;
   border: 1px solid black;
   border-radius: 15px;
