--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,8 @@
   background-color: gray;
   border: 1px solid black;
   border-radius: 15px;
+  box-shadow: 0 10px 25px rgba(2, 2, 10, 0.08);
+
 }
 h2 {
   text-align: center;
@@ -31,8 +33,16 @@ input {
   border: none;
 }
 
+select {
+  width: 100%;
+  margin-top: 20px;
+  border-radius: 5px;
+  border: none;
+}
+
 input::placeholder {
   color: #64748b;
+  font-weight: bold;
 }
 
 button {
