--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,6 @@ button:hover {
   width: fit-content;
   border-radius: 10px;
   border: none;
-  background-color: rgb(122, 151, 122);
+  background-color: #313e53;
   color: white;
 }
