--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,13 @@ input::placeholder {
   font-weight: bold;
 }
 
+textarea{
+  width: 100%;
+  margin-top: 20px;
+  border-radius: 5px;
+  border: none;
+}
+
 button {
   margin-top: 20px;
   width: fit-content;
