--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,12 @@
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     sans-serif;
   padding: 10px 10px;
+
   
+}
+
+body {
+  background-color: #d7cfe0;
 }
 
 .container {
@@ -14,16 +19,17 @@
   justify-self: center;
   max-width: 500px;
   width: 100%;
-  background-color: gray;
-  border: 1px solid black;
+  background-color: #d6d6d6;
+  border: none;
   border-radius: 15px;
-  box-shadow: 0 10px 25px rgba(2, 2, 10, 0.08);
+  box-shadow: 0 8px 20px #0000002e;
 
 }
 h2 {
   text-align: center;
-  border-bottom: 1px solid #1e293b;
-  color: #1e293b;
+  border-bottom: 1px solid orange;
+  color: Orange;
+  
 }
 
 input {
@@ -31,6 +37,7 @@ input {
   margin-top: 20px;
   border-radius: 5px;
   border: none;
+  box-shadow: 0 8px 20px #0000002e;
 }
 
 select {
@@ -38,6 +45,7 @@ select {
   margin-top: 20px;
   border-radius: 5px;
   border: none;
+  box-shadow: 0 8px 20px #0000002e;
 }
 input:hover{
   transform: translateY(-2px);
@@ -57,6 +65,12 @@ textarea{
   margin-top: 20px;
   border-radius: 5px;
   border: none;
+  box-shadow: 0 8px 20px #0000002e;
+}
+
+textarea::placeholder{
+  color: #64748b;
+  font-weight: bold;  
 }
 
 button {
@@ -64,7 +78,7 @@ button {
   width: fit-content;
   border-radius: 10px;
   border: none;
-  background-color: #1e293b;
+  background-color: orange;
   color: white;
 }
 button:hover {
@@ -72,6 +86,6 @@ button:hover {
   width: fit-content;
   border-radius: 10px;
   border: none;
-  background-color: #313e53;
-  color: white;
+  background-color: white;
+  color: orange;
 }
