--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ body {
   display: flex;
   flex-direction: column;
   align-self: center;
+  place-self: center;
   justify-self: center;
   max-width: 500px;
   width: 100%;
